estetica e algumas sinopses

--- a/equipe.html
+++ b/equipe.html
@@ -5,22 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="index.css">
-    <title>Página Principal</title>
+    <title>Equipe</title>
 </head>
 <body>
     <div id="barra-lateral">
+        <p class="links-barra" id="principal"><a href="index.html" class="links-principal">Página Principal</a></p>
         <p class="links-barra" id="primeira-crianca"><a href="filmes.html" class="links-barra">Filmes</a></p>
         <p class="links-barra"><a href="series.html" class="links-barra">Séries</a></p>
         <p class="links-barra"><a href="desenhosanimados.html" class="links-barra">Desenhos Animados</a></p>
         <p class="links-barra"><a href="animes.html" class="links-barra">Animes</a></p>
         <p class="links-barra"><a href="jogos.html" class="links-barra">Jogos</a></p>
     </div>
-    <div id="conteudo">
-        <p><a href="contato.html">Contato</a></p>
-        <p><a href="equipe.html">Equipe</a></p>
-    </div>
-    <footer>
-        
-    </footer>
 </body>
 </html>
