--- a/animes.html
+++ b/animes.html
@@ -9,7 +9,7 @@
 </head>
 <body id="animes">
     <div id="barra-superior">
-        <p class="links-barra" id="principal"><a href="index.html">Página Principal</a></p>
+        <p class="links-barra" id="principal"><a href="index.html" class="links-principal">Página Principal</a></p>
         <p class="links-barra"><a href="filmes.html" class="links-barra">Filmes</a></p>
         <p class="links-barra"><a href="series.html" class="links-barra">Series</a></p>
         <p class="links-barra"><a href="desenhosanimados.html" class="links-barra">Desenhos<br>Animados</a></p>
@@ -51,10 +51,136 @@
                         <p class="formatacao-texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis hic adipisci porro commodi? Voluptatem quia a fuga distinctio facere qui ipsam, sit reiciendis assumenda harum officiis sunt, est sapiente sint.</p>
                     </div>
                     <div class="trailer">
-                        <video width="380" src="Vídeos\Minha_Mae_e_Uma_Peca-3.mp4" controls>
+                        <video width="380" src="Vídeos\Minha_Mae_e_Uma_Peca_3.mp4" controls>
                     </div>
                 </div>
             </details>
+        </div>
+        <div id="terceiro">
+            <div class="generos">
+                <h4>Gêneros: </h4>
+                <h5>Terror</h5> <h5>Aventura</h5>
+            </div>
+            <p class="formatacao-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel reprehenderit, velit illum placeat, veritatis molestiae temporibus impedit vero eum consectetur facere debitis libero adipisci quae doloremque quidem sapiente modi illo! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro repudiandae facere exercitationem neque, tempora molestias nostrum labore reiciendis? Iusto eos labore animi similique commodi tempora dolor nulla debitis nihil illum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium explicabo fugiat, soluta aliquid ad possimus corrupti quisquam illo autem doloribus cupiditate quae debitis amet earum voluptates veritatis recusandae dolorem beatae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita mollitia reprehenderit veritatis tempore blanditiis harum dolor numquam a, inventore, hic nulla illum dolorem velit quasi doloremque accusamus asperiores placeat sed.<br><br></p>
+            <!--  Nome, sinopse e trailer  -->
+            <details>
+                <summary>▶ Descobriu qual é?</summary>
+                <div class="resposta">
+                    <div class="informacoes">
+                        <p class="formatacao-texto">Nome: Lorem ipsum</p>
+                        <p class="formatacao-texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis hic adipisci porro commodi? Voluptatem quia a fuga distinctio facere qui ipsam, sit reiciendis assumenda harum officiis sunt, est sapiente sint. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur laboriosam sed vero itaque nihil vitae totam ad magni atque? Accusamus libero saepe vero aut ut vitae magni impedit minima veniam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas modi nemo necessitatibus, nisi veniam at temporibus sint totam quam distinctio illum velit officiis dolore perspiciatis aliquam, perferendis dolor libero omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt dolores architecto eos sunt reprehenderit. Magni sint qui porro expedita ab, velit fuga officiis dolor sapiente? Eligendi delectus nulla quas minima!</p>
+                    </div>
+                    <div class="trailer">
+                        <video width="380" src="Vídeos\Avalanche.mp4" controls>
+                    </div>
+                </div>
+            </details>
+            <h6 class="divisao"><br></h6>
+        </div>
+        <div id="quarto">
+            <div class="generos">
+                <h4>Gêneros: </h4>
+                <h5>Terror</h5> <h5>Aventura</h5>
+            </div>
+            <p class="formatacao-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel reprehenderit, velit illum placeat, veritatis molestiae temporibus impedit vero eum consectetur facere debitis libero adipisci quae doloremque quidem sapiente modi illo! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro repudiandae facere exercitationem neque, tempora molestias nostrum labore reiciendis? Iusto eos labore animi similique commodi tempora dolor nulla debitis nihil illum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium explicabo fugiat, soluta aliquid ad possimus corrupti quisquam illo autem doloribus cupiditate quae debitis amet earum voluptates veritatis recusandae dolorem beatae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita mollitia reprehenderit veritatis tempore blanditiis harum dolor numquam a, inventore, hic nulla illum dolorem velit quasi doloremque accusamus asperiores placeat sed.<br><br></p>
+            <!--  Nome, sinopse e trailer  -->
+            <details>
+                <summary>▶ Descobriu qual é?</summary>
+                <div class="resposta">
+                    <div class="informacoes">
+                        <p class="formatacao-texto">Nome: Lorem ipsum</p>
+                        <p class="formatacao-texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis hic adipisci porro commodi? Voluptatem quia a fuga distinctio facere qui ipsam, sit reiciendis assumenda harum officiis sunt, est sapiente sint. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur laboriosam sed vero itaque nihil vitae totam ad magni atque? Accusamus libero saepe vero aut ut vitae magni impedit minima veniam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas modi nemo necessitatibus, nisi veniam at temporibus sint totam quam distinctio illum velit officiis dolore perspiciatis aliquam, perferendis dolor libero omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt dolores architecto eos sunt reprehenderit. Magni sint qui porro expedita ab, velit fuga officiis dolor sapiente? Eligendi delectus nulla quas minima!</p>
+                    </div>
+                    <div class="trailer">
+                        <video width="380" src="Vídeos\Avalanche.mp4" controls>
+                    </div>
+                </div>
+            </details>
+            <h6 class="divisao"><br></h6>
+        </div>
+        <div id="quinto">
+            <div class="generos">
+                <h4>Gêneros: </h4>
+                <h5>Terror</h5> <h5>Aventura</h5>
+            </div>
+            <p class="formatacao-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel reprehenderit, velit illum placeat, veritatis molestiae temporibus impedit vero eum consectetur facere debitis libero adipisci quae doloremque quidem sapiente modi illo! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro repudiandae facere exercitationem neque, tempora molestias nostrum labore reiciendis? Iusto eos labore animi similique commodi tempora dolor nulla debitis nihil illum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium explicabo fugiat, soluta aliquid ad possimus corrupti quisquam illo autem doloribus cupiditate quae debitis amet earum voluptates veritatis recusandae dolorem beatae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita mollitia reprehenderit veritatis tempore blanditiis harum dolor numquam a, inventore, hic nulla illum dolorem velit quasi doloremque accusamus asperiores placeat sed.<br><br></p>
+            <!--  Nome, sinopse e trailer  -->
+            <details>
+                <summary>▶ Descobriu qual é?</summary>
+                <div class="resposta">
+                    <div class="informacoes">
+                        <p class="formatacao-texto">Nome: Lorem ipsum</p>
+                        <p class="formatacao-texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis hic adipisci porro commodi? Voluptatem quia a fuga distinctio facere qui ipsam, sit reiciendis assumenda harum officiis sunt, est sapiente sint. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur laboriosam sed vero itaque nihil vitae totam ad magni atque? Accusamus libero saepe vero aut ut vitae magni impedit minima veniam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas modi nemo necessitatibus, nisi veniam at temporibus sint totam quam distinctio illum velit officiis dolore perspiciatis aliquam, perferendis dolor libero omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt dolores architecto eos sunt reprehenderit. Magni sint qui porro expedita ab, velit fuga officiis dolor sapiente? Eligendi delectus nulla quas minima!</p>
+                    </div>
+                    <div class="trailer">
+                        <video width="380" src="Vídeos\Avalanche.mp4" controls>
+                    </div>
+                </div>
+            </details>
+            <h6 class="divisao"><br></h6>
+        </div>
+        <div id="sexto">
+            <div class="generos">
+                <h4>Gêneros: </h4>
+                <h5>Terror</h5> <h5>Aventura</h5>
+            </div>
+            <p class="formatacao-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel reprehenderit, velit illum placeat, veritatis molestiae temporibus impedit vero eum consectetur facere debitis libero adipisci quae doloremque quidem sapiente modi illo! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro repudiandae facere exercitationem neque, tempora molestias nostrum labore reiciendis? Iusto eos labore animi similique commodi tempora dolor nulla debitis nihil illum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium explicabo fugiat, soluta aliquid ad possimus corrupti quisquam illo autem doloribus cupiditate quae debitis amet earum voluptates veritatis recusandae dolorem beatae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita mollitia reprehenderit veritatis tempore blanditiis harum dolor numquam a, inventore, hic nulla illum dolorem velit quasi doloremque accusamus asperiores placeat sed.<br><br></p>
+            <!--  Nome, sinopse e trailer  -->
+            <details>
+                <summary>▶ Descobriu qual é?</summary>
+                <div class="resposta">
+                    <div class="informacoes">
+                        <p class="formatacao-texto">Nome: Lorem ipsum</p>
+                        <p class="formatacao-texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis hic adipisci porro commodi? Voluptatem quia a fuga distinctio facere qui ipsam, sit reiciendis assumenda harum officiis sunt, est sapiente sint. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur laboriosam sed vero itaque nihil vitae totam ad magni atque? Accusamus libero saepe vero aut ut vitae magni impedit minima veniam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas modi nemo necessitatibus, nisi veniam at temporibus sint totam quam distinctio illum velit officiis dolore perspiciatis aliquam, perferendis dolor libero omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt dolores architecto eos sunt reprehenderit. Magni sint qui porro expedita ab, velit fuga officiis dolor sapiente? Eligendi delectus nulla quas minima!</p>
+                    </div>
+                    <div class="trailer">
+                        <video width="380" src="Vídeos\Avalanche.mp4" controls>
+                    </div>
+                </div>
+            </details>
+            <h6 class="divisao"><br></h6>
+        </div>
+        <div id="setimo">
+            <div class="generos">
+                <h4>Gêneros: </h4>
+                <h5>Terror</h5> <h5>Aventura</h5>
+            </div>
+            <p class="formatacao-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel reprehenderit, velit illum placeat, veritatis molestiae temporibus impedit vero eum consectetur facere debitis libero adipisci quae doloremque quidem sapiente modi illo! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro repudiandae facere exercitationem neque, tempora molestias nostrum labore reiciendis? Iusto eos labore animi similique commodi tempora dolor nulla debitis nihil illum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium explicabo fugiat, soluta aliquid ad possimus corrupti quisquam illo autem doloribus cupiditate quae debitis amet earum voluptates veritatis recusandae dolorem beatae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita mollitia reprehenderit veritatis tempore blanditiis harum dolor numquam a, inventore, hic nulla illum dolorem velit quasi doloremque accusamus asperiores placeat sed.<br><br></p>
+            <!--  Nome, sinopse e trailer  -->
+            <details>
+                <summary>▶ Descobriu qual é?</summary>
+                <div class="resposta">
+                    <div class="informacoes">
+                        <p class="formatacao-texto">Nome: Lorem ipsum</p>
+                        <p class="formatacao-texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis hic adipisci porro commodi? Voluptatem quia a fuga distinctio facere qui ipsam, sit reiciendis assumenda harum officiis sunt, est sapiente sint. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur laboriosam sed vero itaque nihil vitae totam ad magni atque? Accusamus libero saepe vero aut ut vitae magni impedit minima veniam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas modi nemo necessitatibus, nisi veniam at temporibus sint totam quam distinctio illum velit officiis dolore perspiciatis aliquam, perferendis dolor libero omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt dolores architecto eos sunt reprehenderit. Magni sint qui porro expedita ab, velit fuga officiis dolor sapiente? Eligendi delectus nulla quas minima!</p>
+                    </div>
+                    <div class="trailer">
+                        <video width="380" src="Vídeos\Avalanche.mp4" controls>
+                    </div>
+                </div>
+            </details>
+            <h6 class="divisao"><br></h6>
+        </div>
+        <div id="ultimo">
+            <div class="generos">
+                <h4>Gêneros: </h4>
+                <h5>Terror</h5> <h5>Aventura</h5>
+            </div>
+            <p class="formatacao-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel reprehenderit, velit illum placeat, veritatis molestiae temporibus impedit vero eum consectetur facere debitis libero adipisci quae doloremque quidem sapiente modi illo! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro repudiandae facere exercitationem neque, tempora molestias nostrum labore reiciendis? Iusto eos labore animi similique commodi tempora dolor nulla debitis nihil illum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium explicabo fugiat, soluta aliquid ad possimus corrupti quisquam illo autem doloribus cupiditate quae debitis amet earum voluptates veritatis recusandae dolorem beatae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita mollitia reprehenderit veritatis tempore blanditiis harum dolor numquam a, inventore, hic nulla illum dolorem velit quasi doloremque accusamus asperiores placeat sed.<br><br></p>
+            <!--  Nome, sinopse e trailer  -->
+            <details>
+                <summary>▶ Descobriu qual é?</summary>
+                <div class="resposta">
+                    <div class="informacoes">
+                        <p class="formatacao-texto">Nome: Lorem ipsum</p>
+                        <p class="formatacao-texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis hic adipisci porro commodi? Voluptatem quia a fuga distinctio facere qui ipsam, sit reiciendis assumenda harum officiis sunt, est sapiente sint. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur laboriosam sed vero itaque nihil vitae totam ad magni atque? Accusamus libero saepe vero aut ut vitae magni impedit minima veniam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas modi nemo necessitatibus, nisi veniam at temporibus sint totam quam distinctio illum velit officiis dolore perspiciatis aliquam, perferendis dolor libero omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt dolores architecto eos sunt reprehenderit. Magni sint qui porro expedita ab, velit fuga officiis dolor sapiente? Eligendi delectus nulla quas minima!</p>
+                    </div>
+                    <div class="trailer">
+                        <video width="380" src="Vídeos\Avalanche.mp4" controls>
+                    </div>
+                </div>
+            </details>
+            <h6 class="divisao"><br></h6>
         </div>
     </div>
 </body>
