--- a/filmes.html
+++ b/filmes.html
@@ -9,14 +9,179 @@
 </head>
 <body id="filmes">
     <div id="barra-superior">
-        <p class="links-barra" id="principal"><a href="index.html">Página Principal</a></p>
+        <p class="links-barra" id="principal"><a href="index.html" class="links-principal">Página Principal</a></p>
         <p class="links-barra"><a href="series.html" class="links-barra">Series</a></p>
         <p class="links-barra"><a href="desenhosanimados.html" class="links-barra">Desenhos<br>Animados</a></p>
         <p class="links-barra"><a href="animes.html" class="links-barra">Animes</a></p>
         <p class="links-barra"><a href="jogos.html" class="links-barra">Jogos</a></p>
     </div>
     <div id="conteudo">
-        
+        <div id="primeiro">
+            <div class="generos">
+                <h4>Gêneros: </h4>
+                <h5>Terror</h5> <h5>Aventura</h5>
+            </div>
+            <p class="formatacao-texto">Uma misteriosa doença se alastra pelo planeta, contaminando pessoas com uma velocidade impressionante, transformando-as em zumbis e aí, um paizão de família é convocado em igual rapidez pelo Governo americano (sempre eles) para salvar a humanidade.<br><br></p>
+            <!--  Nome, sinopse e trailer  -->
+            <details>
+                <summary>▶ Descobriu qual é?</summary>
+                <div class="resposta">
+                    <div class="informacoes">
+                        <p class="formatacao-texto">Nome: Guerra Mundial Z</p>
+                        <p class="formatacao-texto">Um vírus letal se espalha rapidamente e transforma seres humanos em zumbis. O ex-agente da ONU Gerry Lane é chamado para investigar a epidemia que está acabando com a humanidade, iniciando uma verdadeira corrida contra o tempo.</p>
+                    </div>
+                    <div class="trailer">
+                        <video width="380" src="Vídeos\Avalanche.mp4" controls>
+                    </div>
+                </div>
+            </details>
+            <h6 class="divisao"><br></h6>
+        </div>
+        <div id="segundo">
+            <div class="generos">
+                <h4>Gêneros: </h4>
+                <h5>Comédia</h5> <h5>Ficção Científica</h5>
+            </div>
+            <p class="formatacao-texto">Tem uns bichos muito loucos que invadiram a Terra, só que nem todo mundo sabe disso, inclusive tem uns que se disfarçam de humanos e vivem junto com eles também. Aí, por conta disso, criaram uma organização secreta pra ver se esses bichos tão fazendo coisa errada. E o protagonista é chamado pra fazer parte dessa organização por livre e espontânea pressão, mas depois de um tempo até que ele gostou de lá.<br><br></p>
+            <details>
+                <summary>▶ Descobriu qual é?</summary>
+                <div class="resposta">
+                    <div class="informacoes">
+                        <p class="formatacao-texto">Nome: MIB: Homens de Preto</p>
+                        <p class="formatacao-texto">Kay e Jay, os "Homens de Preto", são o maior segredo já mantido no universo. Eles são agentes de uma agência não-oficial do governo e responsáveis por monitorar todos os encontros com alienígenas na Terra. Ao investigar uma série de atividades extraterrestres, descobrem um terrorista intergaláctico cuja missão é assassinar dois embaixadores de galáxias opostas.</p>
+                    </div>
+                    <div class="trailer">
+                        <video width="380" src="Vídeos\Minha_Mae_e_Uma_Peca_3.mp4" controls>
+                    </div>
+                </div>
+            </details>
+        </div>
+        <div id="terceiro">
+            <div class="generos">
+                <h4>Gêneros: </h4>
+                <h5>Ficção Científica</h5> <h5>Aventura</h5>
+            </div>
+            <p class="formatacao-texto">Um cara se infiltra no mundos de umas espécies de aliens, pra tentar pegar meio que um tesouro mas chegando lá, conhece uma boyzinha, fica xonado e resolve ajudar o planeta dela na luta contra os humanos<br><br></p>
+            <!--  Nome, sinopse e trailer  -->
+            <details>
+                <summary>▶ Descobriu qual é?</summary>
+                <div class="resposta">
+                    <div class="informacoes">
+                        <p class="formatacao-texto">Nome: Avatar</p>
+                        <p class="formatacao-texto">No exuberante mundo alienígena de Pandora vivem os Na'vi, seres que parecem ser primitivos, mas são altamente evoluídos. Como o ambiente do planeta é tóxico, foram criados os avatares, corpos biológicos controlados pela mente humana que se movimentam livremente em Pandora. Jake Sully, um ex-fuzileiro naval paralítico, volta a andar através de um avatar e se apaixona por uma Na'vi. Esta paixão leva Jake a lutar pela sobrevivência de Pandora.</p>
+                    </div>
+                    <div class="trailer">
+                        <video width="380" src="Vídeos\Avalanche.mp4" controls>
+                    </div>
+                </div>
+            </details>
+            <h6 class="divisao"><br></h6>
+        </div>
+        <div id="quarto">
+            <div class="generos">
+                <h4>Gêneros: </h4>
+                <h5>Suspense</h5> <h5>Drama</h5>
+            </div>
+            <p class="formatacao-texto">Um doido arquiteta um plano para roubar a casa da moeda da Espanha, convoca outros doidos que nem ele, se preparam com armas e vão. Mas como o doido chefe é o bichão ele já sabe o que vai dar errado e como resolver.<br><br></p>
+            <!--  Nome, sinopse e trailer  -->
+            <details>
+                <summary>▶ Descobriu qual é?</summary>
+                <div class="resposta">
+                    <div class="informacoes">
+                        <p class="formatacao-texto">Nome:La casa de Papel</p>
+                        <p class="formatacao-texto">Oito ladrões se trancam com reféns na Casa da Moeda da Espanha. Seu líder manipula a polícia para realizar um plano. Será o maior roubo da história, ou uma missão em vão?</p>
+                    </div>
+                    <div class="trailer">
+                        <video width="380" src="Vídeos\Avalanche.mp4" controls>
+                    </div>
+                </div>
+            </details>
+            <h6 class="divisao"><br></h6>
+        </div>
+        <div id="quinto">
+            <div class="generos">
+                <h4>Gêneros: </h4>
+                <h5>Terror</h5> <h5>Aventura</h5>
+            </div>
+            <p class="formatacao-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel reprehenderit, velit illum placeat, veritatis molestiae temporibus impedit vero eum consectetur facere debitis libero adipisci quae doloremque quidem sapiente modi illo! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro repudiandae facere exercitationem neque, tempora molestias nostrum labore reiciendis? Iusto eos labore animi similique commodi tempora dolor nulla debitis nihil illum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium explicabo fugiat, soluta aliquid ad possimus corrupti quisquam illo autem doloribus cupiditate quae debitis amet earum voluptates veritatis recusandae dolorem beatae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita mollitia reprehenderit veritatis tempore blanditiis harum dolor numquam a, inventore, hic nulla illum dolorem velit quasi doloremque accusamus asperiores placeat sed.<br><br></p>
+            <!--  Nome, sinopse e trailer  -->
+            <details>
+                <summary>▶ Descobriu qual é?</summary>
+                <div class="resposta">
+                    <div class="informacoes">
+                        <p class="formatacao-texto">Nome: Lorem ipsum</p>
+                        <p class="formatacao-texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis hic adipisci porro commodi? Voluptatem quia a fuga distinctio facere qui ipsam, sit reiciendis assumenda harum officiis sunt, est sapiente sint. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur laboriosam sed vero itaque nihil vitae totam ad magni atque? Accusamus libero saepe vero aut ut vitae magni impedit minima veniam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas modi nemo necessitatibus, nisi veniam at temporibus sint totam quam distinctio illum velit officiis dolore perspiciatis aliquam, perferendis dolor libero omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt dolores architecto eos sunt reprehenderit. Magni sint qui porro expedita ab, velit fuga officiis dolor sapiente? Eligendi delectus nulla quas minima!</p>
+                    </div>
+                    <div class="trailer">
+                        <video width="380" src="Vídeos\Avalanche.mp4" controls>
+                    </div>
+                </div>
+            </details>
+            <h6 class="divisao"><br></h6>
+        </div>
+        <div id="sexto">
+            <div class="generos">
+                <h4>Gêneros: </h4>
+                <h5>Terror</h5> <h5>Aventura</h5>
+            </div>
+            <p class="formatacao-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel reprehenderit, velit illum placeat, veritatis molestiae temporibus impedit vero eum consectetur facere debitis libero adipisci quae doloremque quidem sapiente modi illo! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro repudiandae facere exercitationem neque, tempora molestias nostrum labore reiciendis? Iusto eos labore animi similique commodi tempora dolor nulla debitis nihil illum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium explicabo fugiat, soluta aliquid ad possimus corrupti quisquam illo autem doloribus cupiditate quae debitis amet earum voluptates veritatis recusandae dolorem beatae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita mollitia reprehenderit veritatis tempore blanditiis harum dolor numquam a, inventore, hic nulla illum dolorem velit quasi doloremque accusamus asperiores placeat sed.<br><br></p>
+            <!--  Nome, sinopse e trailer  -->
+            <details>
+                <summary>▶ Descobriu qual é?</summary>
+                <div class="resposta">
+                    <div class="informacoes">
+                        <p class="formatacao-texto">Nome: Lorem ipsum</p>
+                        <p class="formatacao-texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis hic adipisci porro commodi? Voluptatem quia a fuga distinctio facere qui ipsam, sit reiciendis assumenda harum officiis sunt, est sapiente sint. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur laboriosam sed vero itaque nihil vitae totam ad magni atque? Accusamus libero saepe vero aut ut vitae magni impedit minima veniam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas modi nemo necessitatibus, nisi veniam at temporibus sint totam quam distinctio illum velit officiis dolore perspiciatis aliquam, perferendis dolor libero omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt dolores architecto eos sunt reprehenderit. Magni sint qui porro expedita ab, velit fuga officiis dolor sapiente? Eligendi delectus nulla quas minima!</p>
+                    </div>
+                    <div class="trailer">
+                        <video width="380" src="Vídeos\Avalanche.mp4" controls>
+                    </div>
+                </div>
+            </details>
+            <h6 class="divisao"><br></h6>
+        </div>
+        <div id="setimo">
+            <div class="generos">
+                <h4>Gêneros: </h4>
+                <h5>Terror</h5> <h5>Aventura</h5>
+            </div>
+            <p class="formatacao-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel reprehenderit, velit illum placeat, veritatis molestiae temporibus impedit vero eum consectetur facere debitis libero adipisci quae doloremque quidem sapiente modi illo! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro repudiandae facere exercitationem neque, tempora molestias nostrum labore reiciendis? Iusto eos labore animi similique commodi tempora dolor nulla debitis nihil illum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium explicabo fugiat, soluta aliquid ad possimus corrupti quisquam illo autem doloribus cupiditate quae debitis amet earum voluptates veritatis recusandae dolorem beatae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita mollitia reprehenderit veritatis tempore blanditiis harum dolor numquam a, inventore, hic nulla illum dolorem velit quasi doloremque accusamus asperiores placeat sed.<br><br></p>
+            <!--  Nome, sinopse e trailer  -->
+            <details>
+                <summary>▶ Descobriu qual é?</summary>
+                <div class="resposta">
+                    <div class="informacoes">
+                        <p class="formatacao-texto">Nome: Lorem ipsum</p>
+                        <p class="formatacao-texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis hic adipisci porro commodi? Voluptatem quia a fuga distinctio facere qui ipsam, sit reiciendis assumenda harum officiis sunt, est sapiente sint. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur laboriosam sed vero itaque nihil vitae totam ad magni atque? Accusamus libero saepe vero aut ut vitae magni impedit minima veniam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas modi nemo necessitatibus, nisi veniam at temporibus sint totam quam distinctio illum velit officiis dolore perspiciatis aliquam, perferendis dolor libero omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt dolores architecto eos sunt reprehenderit. Magni sint qui porro expedita ab, velit fuga officiis dolor sapiente? Eligendi delectus nulla quas minima!</p>
+                    </div>
+                    <div class="trailer">
+                        <video width="380" src="Vídeos\Avalanche.mp4" controls>
+                    </div>
+                </div>
+            </details>
+            <h6 class="divisao"><br></h6>
+        </div>
+        <div id="ultimo">
+            <div class="generos">
+                <h4>Gêneros: </h4>
+                <h5>Terror</h5> <h5>Aventura</h5>
+            </div>
+            <p class="formatacao-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel reprehenderit, velit illum placeat, veritatis molestiae temporibus impedit vero eum consectetur facere debitis libero adipisci quae doloremque quidem sapiente modi illo! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro repudiandae facere exercitationem neque, tempora molestias nostrum labore reiciendis? Iusto eos labore animi similique commodi tempora dolor nulla debitis nihil illum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium explicabo fugiat, soluta aliquid ad possimus corrupti quisquam illo autem doloribus cupiditate quae debitis amet earum voluptates veritatis recusandae dolorem beatae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita mollitia reprehenderit veritatis tempore blanditiis harum dolor numquam a, inventore, hic nulla illum dolorem velit quasi doloremque accusamus asperiores placeat sed.<br><br></p>
+            <!--  Nome, sinopse e trailer  -->
+            <details>
+                <summary>▶ Descobriu qual é?</summary>
+                <div class="resposta">
+                    <div class="informacoes">
+                        <p class="formatacao-texto">Nome: Lorem ipsum</p>
+                        <p class="formatacao-texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis hic adipisci porro commodi? Voluptatem quia a fuga distinctio facere qui ipsam, sit reiciendis assumenda harum officiis sunt, est sapiente sint. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur laboriosam sed vero itaque nihil vitae totam ad magni atque? Accusamus libero saepe vero aut ut vitae magni impedit minima veniam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas modi nemo necessitatibus, nisi veniam at temporibus sint totam quam distinctio illum velit officiis dolore perspiciatis aliquam, perferendis dolor libero omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt dolores architecto eos sunt reprehenderit. Magni sint qui porro expedita ab, velit fuga officiis dolor sapiente? Eligendi delectus nulla quas minima!</p>
+                    </div>
+                    <div class="trailer">
+                        <video width="380" src="Vídeos\Avalanche.mp4" controls>
+                    </div>
+                </div>
+            </details>
+            <h6 class="divisao"><br></h6>
+        </div>
     </div>
 </body>
 </html>
